--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,1 @@
-<button (click)="table.toggleColumn(0)">Toggle 0</button>
-<button (click)="table.toggleColumn(1)">Toggle 1</button>
-<button (click)="table.toggleColumn(2)">Toggle 2</button>
-<button (click)="table.toggleColumn(3)">Toggle 3</button>
-<button (click)="table.toggleColumn(4)">Toggle 4</button>
-<button (click)="table.toggleColumn(5)">Toggle 5</button>
-<button (click)="table.toggleColumn(6)">Toggle 6</button>
-
-
-<MsTable #table  style="height: 500px">
-  <tr *ms-tableHeadDef ms-tableHead>
-    <th ms-tableHeadCell name="#">#</th>
-    <th ms-tableHeadCell name="id" [sortBy]="['id', 'number']">Id</th>
-    <th ms-tableHeadCell [sortBy]="['position', 'number']">Position</th>
-    <th ms-tableHeadCell [sortBy]="['name', 'string']">Name</th>
-    <th ms-tableHeadCell [sortBy]="['weight', 'number']">Weight</th>
-    <th ms-tableHeadCell [sortBy]="['symbol', 'string']">Symbol</th>
-    <th ms-tableHeadCell [sortBy]="['type', 'string']">Type</th>
-    <th ms-tableHeadCell >Action</th>
-  </tr>
-
-  <tr ms-tableRow *ms-tableRowDef="let item of elements; let i=index" #row>
-    <td ms-tableCell>{{i}} </td>
-    <td ms-tableCell>{{item.id}}</td>
-    <td ms-tableCell>{{item.position}}</td>
-    <td ms-tableCell>{{item.name}}</td>
-    <td ms-tableCell>{{item.weight}}</td>
-    <td ms-tableCell>{{item.symbol}}</td>
-    <td ms-tableCell>{{item.type}}</td>
-    <td ms-tableCell>
-      <span style="color: blue; cursor: pointer" (click)="table.remove(item)">Delete</span>
-    </td>
-  </tr>
-</MsTable>
-
+<router-outlet></router-outlet>
